Template engine api, core, impl

--- a/conf/templateEngineStack.conf
+++ b/conf/templateEngineStack.conf
@@ -1,2 +1,19 @@
 ########### Modules to start ###########
-ToDo
+modules = [
+  "templateEngine=io.knotx.te.core.TemplateEngineKnot"
+]
+
+########### Globals ###########
+global {
+  # Template Engine globals
+  templateEngine {
+    address = knotx.knot.te
+  }
+}
+
+########### Modules configurations ###########
+config.templateEngine {
+  options.config {
+    include required(classpath("includes/templateEngine.conf"))
+  }
+}
