update readme and docs

--- a/release.gradle
+++ b/release.gradle
@@ -86,7 +86,9 @@ publishing {
 }
 
 signing {
-  required { gradle.taskGraph.hasTask(tasks.publish) || gradle.taskGraph.hasTask(tasks.publishMavenJavaPublicationToMavenRepository) }
+  required {
+    gradle.taskGraph.hasTask(tasks.publish) || gradle.taskGraph.hasTask(tasks.publishMavenJavaPublicationToMavenRepository)
+  }
   sign publishing.publications.mavenJava
 }
 
