--- a/build.gradle
+++ b/build.gradle
@@ -15,117 +15,117 @@
  */
 
 plugins {
-    id 'io.spring.dependency-management' version '1.0.5.RELEASE' apply false
-    id 'maven'
+  id 'io.spring.dependency-management' version '1.0.5.RELEASE' apply false
+  id 'maven'
 }
 
 allprojects {
-    repositories {
-        mavenLocal()
-        jcenter()
-        maven { url 'https://plugins.gradle.org/m2/' }
-        maven { url "https://oss.sonatype.org/content/groups/staging/" }
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-    }
+  repositories {
+    mavenLocal()
+    jcenter()
+    maven { url 'https://plugins.gradle.org/m2/' }
+    maven { url "https://oss.sonatype.org/content/groups/staging/" }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+  }
 }
 
 defaultTasks = ['build']
 
 subprojects { subproject ->
-    group = 'io.knotx'
+  group = 'io.knotx'
 
-    apply plugin: 'java-library'
-    apply plugin: 'io.spring.dependency-management'
+  apply plugin: 'java-library'
+  apply plugin: 'io.spring.dependency-management'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
 
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
-        options.compilerArgs << '-Xlint:deprecation'
-        options.incremental = true
+  tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    options.compilerArgs << '-Xlint:deprecation'
+    options.incremental = true
+  }
+
+  dependencyManagement {
+    imports {
+      mavenBom "io.knotx:knotx-dependencies:${project.version}"
     }
+  }
 
-    dependencyManagement {
-        imports {
-            mavenBom "io.knotx:knotx-dependencies:${project.version}"
-        }
+  dependencies {
+    compile 'io.knotx:knotx-core'
+
+    compile 'io.vertx:vertx-core'
+    compile 'io.vertx:vertx-service-proxy'
+    compile 'io.vertx:vertx-rx-java2'
+
+    compileOnly 'io.vertx:vertx-codegen'
+
+    // Test dependencies
+    testCompile 'org.junit.jupiter:junit-jupiter-api'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine'
+    testCompile 'org.junit.jupiter:junit-jupiter-params'
+    testCompile 'org.junit.jupiter:junit-jupiter-migrationsupport'
+    testCompile 'org.junit.vintage:junit-vintage-engine'
+    testCompile 'uk.co.datumedge:hamcrest-json'
+    testCompile 'org.hamcrest:hamcrest-all'
+    testCompile 'com.github.tomakehurst:wiremock'
+
+    testCompileOnly 'io.vertx:vertx-codegen'
+    testCompile 'io.vertx:vertx-config'
+    testCompile 'io.vertx:vertx-junit5'
+    testCompile 'io.knotx:knotx-mocks'
+    testCompile 'io.knotx:knotx-junit5'
+  }
+
+  sourceSets {
+    main {
+      java {
+        srcDirs += 'src/main/generated'
+      }
     }
-
-    dependencies {
-      compile 'io.knotx:knotx-core'
-
-      compile 'io.vertx:vertx-core'
-      compile 'io.vertx:vertx-service-proxy'
-      compile 'io.vertx:vertx-rx-java2'
-
-      compileOnly 'io.vertx:vertx-codegen'
-
-      // Test dependencies
-      testCompile 'org.junit.jupiter:junit-jupiter-api'
-      testCompile 'org.junit.jupiter:junit-jupiter-engine'
-      testCompile 'org.junit.jupiter:junit-jupiter-params'
-      testCompile 'org.junit.jupiter:junit-jupiter-migrationsupport'
-      testCompile 'org.junit.vintage:junit-vintage-engine'
-      testCompile 'uk.co.datumedge:hamcrest-json'
-      testCompile 'org.hamcrest:hamcrest-all'
-      testCompile 'com.github.tomakehurst:wiremock'
-
-      testCompileOnly 'io.vertx:vertx-codegen'
-      testCompile 'io.vertx:vertx-config'
-      testCompile 'io.vertx:vertx-junit5'
-      testCompile 'io.knotx:knotx-mocks'
-      testCompile 'io.knotx:knotx-junit5'
-    }
-
-    sourceSets {
-        main {
-            java {
-                srcDirs += 'src/main/generated'
-            }
-        }
-        test {
-            resources {
-                srcDirs += 'src/test/resources'
-            }
-        }
-    }
-
-    clean.doFirst {
-        file('src/main/generated').deleteDir()
-    }
-
-    task annotationProcessing(type: JavaCompile, group: 'build') { // codegen
-        source = sourceSets.main.java
-        classpath = configurations.compile + configurations.compileOnly
-        destinationDir = project.file('src/main/generated')
-        options.compilerArgs = [
-                "-proc:only",
-                "-processor", "io.vertx.codegen.CodeGenProcessor",
-                "-Acodegen.output=${destinationDir.absolutePath}"
-        ]
-    }
-
-    task annotationProcessingCleanup() {
-        doLast {
-            delete "${project.projectDir}/src/main/generated"
-            println "Removing: ${project.projectDir}/src/main/generated"
-        }
-    }
-
-    annotationProcessing.dependsOn annotationProcessingCleanup
-
     test {
-        useJUnitPlatform()
-
-        include 'io/knotx/te/**'
-
-        systemProperties = [
-                'vertx.logger-delegate-factory-class-name': 'io.vertx.core.logging.SLF4JLogDelegateFactory'
-        ]
+      resources {
+        srcDirs += 'src/test/resources'
+      }
     }
+  }
 
-    if (subproject.name != 'knotx-template-engine-it-test') {
-        apply from: "${rootProject.projectDir}/release.gradle"
+  clean.doFirst {
+    file('src/main/generated').deleteDir()
+  }
+
+  task annotationProcessing(type: JavaCompile, group: 'build') { // codegen
+    source = sourceSets.main.java
+    classpath = configurations.compile + configurations.compileOnly + fileTree('src/main/resources')
+    destinationDir = project.file('src/main/generated')
+    options.compilerArgs = [
+        "-proc:only",
+        "-processor", "io.vertx.codegen.CodeGenProcessor",
+        "-Acodegen.output=${destinationDir.absolutePath}"
+    ]
+  }
+
+  task annotationProcessingCleanup() {
+    doLast {
+      delete "${project.projectDir}/src/main/generated"
+      println "Removing: ${project.projectDir}/src/main/generated"
     }
+  }
+
+  annotationProcessing.dependsOn annotationProcessingCleanup
+
+  test {
+    useJUnitPlatform()
+
+    include 'io/knotx/te/**'
+
+    systemProperties = [
+        'vertx.logger-delegate-factory-class-name': 'io.vertx.core.logging.SLF4JLogDelegateFactory'
+    ]
+  }
+
+  if (subproject.name != 'knotx-template-engine-it-test') {
+    apply from: "${rootProject.projectDir}/release.gradle"
+  }
 }
