TE refactor with the new Knot Engine.

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ subprojects { subproject ->
   }
 
   dependencies {
-    compile 'io.knotx:knotx-core'
+    compile 'io.knotx:knotx-knot-engine-api'
 
     compile 'io.vertx:vertx-core'
     compile 'io.vertx:vertx-service-proxy'
