--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,9 +24,9 @@ configurations {
 
 dependencies {
   compile project(':knotx-template-engine-api')
+  compile("org.apache.commons:commons-lang3")
 
   testCompile project(':knotx-template-engine-api')
-  testCompile group: 'io.knotx', name: 'knotx-core', version: "${project.version}", classifier: 'tests'
 
   testResources sourceSets.test.output
 }
