--- a/conf/templateEngineStack.conf
+++ b/conf/templateEngineStack.conf
@@ -3,17 +3,9 @@ modules = [
   "templateEngine=io.knotx.te.core.TemplateEngineKnot"
 ]
 
-########### Globals ###########
-global {
-  # Template Engine globals
-  templateEngine {
-    address = knotx.knot.te
-  }
-}
-
 ########### Modules configurations ###########
 config.templateEngine {
   options.config {
-    include required(classpath("includes/templateEngine.conf"))
+    include required(classpath("templateEngineKnot.conf"))
   }
 }
