--- a/conf/templateEngineStack.conf
+++ b/conf/templateEngineStack.conf
@@ -1,7 +1,7 @@
 ########### Modules to start ###########
-modules = [
-  "templateEngine=io.knotx.te.core.TemplateEngineKnot"
-]
+modules {
+  templateEngine = "io.knotx.te.core.TemplateEngineKnot"
+}
 
 ########### Modules configurations ###########
 config.templateEngine {
