Fixed dependencies scope

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ defaultTasks = ['build']
 subprojects { subproject ->
   group = 'io.knotx'
 
+  apply plugin: 'maven'
   apply plugin: 'java-library'
   apply plugin: 'io.spring.dependency-management'
 
@@ -71,11 +72,11 @@ subprojects { subproject ->
   }
 
   dependencies {
-    compile 'io.knotx:knotx-core'
+    compileOnly 'io.knotx:knotx-core'
 
-    compile 'io.vertx:vertx-core'
-    compile 'io.vertx:vertx-service-proxy'
-    compile 'io.vertx:vertx-rx-java2'
+    compileOnly 'io.vertx:vertx-core'
+    compileOnly 'io.vertx:vertx-service-proxy'
+    compileOnly 'io.vertx:vertx-rx-java2'
 
     compileOnly 'io.vertx:vertx-codegen'
 
