--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,7 +23,7 @@ configurations {
 }
 
 dependencies {
-  compile project(':knotx-template-engine-api')
+  compileOnly project(':knotx-template-engine-api')
 
   testCompile project(':knotx-template-engine-api')
   testCompile group: 'io.knotx', name: 'knotx-core', version: "${project.version}", classifier: 'tests'
