--- a/handlebars/build.gradle
+++ b/handlebars/build.gradle
@@ -27,7 +27,7 @@ ext {
 }
 
 dependencies {
-  compileOnly project(':knotx-template-engine-api')
+  compile project(':knotx-template-engine-api')
   compile("com.github.jknack:handlebars:$handlebarsVersion")
 
   testCompile 'org.mockito:mockito-core'
