--- a/conf/templateEngineStack.conf
+++ b/conf/templateEngineStack.conf
@@ -3,6 +3,14 @@ modules {
   templateEngine = "io.knotx.te.core.TemplateEngineKnot"
 }
 
+########### Globals ###########
+global {
+  # Template Engine globals
+  templateEngine {
+    address = knotx.knot.te
+  }
+}
+
 ########### Modules configurations ###########
 config.templateEngine {
   options.config {
