--- a/build.gradle
+++ b/build.gradle
@@ -68,9 +68,11 @@ subprojects { subproject ->
     testCompile 'org.junit.jupiter:junit-jupiter-params'
     testCompile 'org.junit.jupiter:junit-jupiter-migrationsupport'
     testCompile 'org.junit.vintage:junit-vintage-engine'
-    testCompile 'uk.co.datumedge:hamcrest-json'
-    testCompile 'org.hamcrest:hamcrest-all'
     testCompile 'com.github.tomakehurst:wiremock'
+
+    // deprecated
+    testCompile 'uk.co.datumedge:hamcrest-json:0.2'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
 
     testCompileOnly 'io.vertx:vertx-codegen'
     testCompile 'io.vertx:vertx-config'
