--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,21 @@
 language: java
+install: true
+
 jdk:
-  - openjdk8
-before_script:
-  - chmod +x ./gradlew
+  - oraclejdk8
+
 script:
-  - ./gradlew clean test --info
+  - ./gradlew build --info
+  - ./gradlew jacocoTestReport
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+cache:
+  directories:
+    - "$HOME/.gradle/caches/"
+    - "$HOME/.gradle/wrapper/"
