--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2.0.0-SNAPSHOT
+version=2.0.0-RC1
 
 # FIXME: enable running in parallel by fixing it-tests (run on different ports)
 org.gradle.daemon=false
