--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 version=2.0.0-SNAPSHOT
+publication.scm=scm:git:git://github.com:Knotx/knotx-template-engine.git
 
 # FIXME: enable running in parallel by fixing it-tests (run on different ports)
 org.gradle.daemon=false
