--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2.0.1-SNAPSHOT
+version=2.1.0
 publication.scm=scm:git:git://github.com:Knotx/knotx-template-engine.git
 
 # FIXME: enable running in parallel by fixing it-tests (run on different ports)
